cakephp-mysql-example-1-86vf5.yaml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    k8s.v1.cni.cncf.io/networks-status: |-
      [{
          "name": "openshift-sdn",
          "interface": "eth0",
          "ips": [
              "10.131.5.8"
          ],
          "default": true,
          "dns": {}
      }]
    kubernetes.io/limit-ranger: 'LimitRanger plugin set: cpu request for container
      cakephp-mysql-example; cpu limit for container cakephp-mysql-example'
    openshift.io/deployment-config.latest-version: "1"
    openshift.io/deployment-config.name: cakephp-mysql-example
    openshift.io/deployment.name: cakephp-mysql-example-1
    openshift.io/generated-by: OpenShiftNewApp
    openshift.io/scc: restricted
  creationTimestamp: "2020-05-06T18:01:02Z"
  generateName: cakephp-mysql-example-1-
  labels:
    deployment: cakephp-mysql-example-1
    deploymentconfig: cakephp-mysql-example
    name: cakephp-mysql-example
  name: cakephp-mysql-example-1-86vf5
  namespace: 4e41-yaml-app
  ownerReferences:
  - apiVersion: v1
    blockOwnerDeletion: true
    controller: true
    kind: ReplicationController
    name: cakephp-mysql-example-1
    uid: 8178caf2-8fc3-11ea-a595-02fdb1202f5a
  resourceVersion: "415391834"
  selfLink: /api/v1/namespaces/4e41-yaml-app/pods/cakephp-mysql-example-1-86vf5
  uid: 8cabd352-8fc3-11ea-a595-02fdb1202f5a
spec:
  containers:
  - env:
    - name: DATABASE_SERVICE_NAME
      value: mysql
    - name: DATABASE_ENGINE
      value: mysql
    - name: DATABASE_NAME
      value: default
    - name: DATABASE_USER
      valueFrom:
        secretKeyRef:
          key: database-user
          name: cakephp-mysql-example
    - name: DATABASE_PASSWORD
      valueFrom:
        secretKeyRef:
          key: database-password
          name: cakephp-mysql-example
    - name: CAKEPHP_SECRET_TOKEN
      valueFrom:
        secretKeyRef:
          key: cakephp-secret-token
          name: cakephp-mysql-example
    - name: CAKEPHP_SECURITY_SALT
      valueFrom:
        secretKeyRef:
          key: cakephp-security-salt
          name: cakephp-mysql-example
    - name: OPCACHE_REVALIDATE_FREQ
      value: "2"
    image: image-registry.openshift-image-registry.svc:5000/4e41-yaml-app/cakephp-mysql-example@sha256:004f5b22c337918ec748e8d38717a02a9595c9f86365c1ebd63548660b1df632
    imagePullPolicy: IfNotPresent
    livenessProbe:
      failureThreshold: 3
      httpGet:
        path: /health.php
        port: 8080
        scheme: HTTP
      initialDelaySeconds: 30
      periodSeconds: 60
      successThreshold: 1
      timeoutSeconds: 3
    name: cakephp-mysql-example
    ports:
    - containerPort: 8080
      protocol: TCP
    readinessProbe:
      failureThreshold: 3
      httpGet:
        path: /health.php
        port: 8080
        scheme: HTTP
      initialDelaySeconds: 3
      periodSeconds: 60
      successThreshold: 1
      timeoutSeconds: 3
    resources:
      limits:
        cpu: 500m
        memory: 512Mi
      requests:
        cpu: 50m
        memory: 512Mi
    securityContext:
      capabilities:
        drop:
        - KILL
        - MKNOD
        - SETGID
        - SETUID
      runAsUser: 1015000000
    terminationMessagePath: /dev/termination-log
    terminationMessagePolicy: File
    volumeMounts:
    - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
      name: default-token-tr4nc
      readOnly: true
  dnsPolicy: ClusterFirst
  enableServiceLinks: true
  imagePullSecrets:
  - name: default-dockercfg-6d6wj
  nodeName: ip-10-0-145-33.us-west-2.compute.internal
  priority: 0
  restartPolicy: Always
  schedulerName: default-scheduler
  securityContext:
    fsGroup: 1015000000
    seLinuxOptions:
      level: s0:c122,c119
  serviceAccount: default
  serviceAccountName: default
  terminationGracePeriodSeconds: 30
  tolerations:
  - effect: NoSchedule
    key: node.kubernetes.io/memory-pressure
    operator: Exists
  - effect: NoExecute
    key: node.kubernetes.io/not-ready
    operator: Exists
    tolerationSeconds: 300
  - effect: NoExecute
    key: node.kubernetes.io/unreachable
    operator: Exists
    tolerationSeconds: 300
  volumes:
  - name: default-token-tr4nc
    secret:
      defaultMode: 420
      secretName: default-token-tr4nc
status:
  conditions:
  - lastProbeTime: null
    lastTransitionTime: "2020-05-06T18:01:02Z"
    status: "True"
    type: Initialized
  - lastProbeTime: null
    lastTransitionTime: "2020-05-06T18:01:57Z"
    status: "True"
    type: Ready
  - lastProbeTime: null
    lastTransitionTime: "2020-05-06T18:01:57Z"
    status: "True"
    type: ContainersReady
  - lastProbeTime: null
    lastTransitionTime: "2020-05-06T18:01:02Z"
    status: "True"
    type: PodScheduled
  containerStatuses:
  - containerID: cri-o://2cc3a7ba89c26aa7e77efe992b7d723be88268747e19c5466c1df47a453cf62a
    image: image-registry.openshift-image-registry.svc:5000/4e41-yaml-app/cakephp-mysql-example@sha256:004f5b22c337918ec748e8d38717a02a9595c9f86365c1ebd63548660b1df632
    imageID: image-registry.openshift-image-registry.svc:5000/4e41-yaml-app/cakephp-mysql-example@sha256:004f5b22c337918ec748e8d38717a02a9595c9f86365c1ebd63548660b1df632
    lastState: {}
    name: cakephp-mysql-example
    ready: true
    restartCount: 0
    state:
      running:
        startedAt: "2020-05-06T18:01:12Z"
  hostIP: 10.0.145.33
  phase: Running
  podIP: 10.131.5.8
  qosClass: Burstable
  startTime: "2020-05-06T18:01:02Z"
