ocp-probe-deploymentconfig.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  name: ocp-probe
spec:
  selector:
      app: ocp-probe
  replicas: 1
  template:
    metadata:
      labels:
        app: ocp-probe
    spec:
      containers:
      - name: ocp-probe
        image: quay.io/gpte-devops-automation/ocp-probe:v0.3
        ports:
        - containerPort: 8080
