yaml-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: yaml-deployment
spec:
  selector:
    matchLabels:
      app: web-test
  template:
    metadata:
      labels:
        app: web-test
    spec:
      containers:
      - name: web-test
        image: image-registry.openshift-image-registry.svc:5000/openshift/httpd
        ports:
        - containerPort: 8080
